--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
         {
             "name": "Andi Nitsche",
             "email": "andi@inbaz.org"
+        },
+        {
+            "name": "Christopher Francisco",
+            "email": "chris273a@gmail.com"
         }
     ],
         
